--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ justify-content: space-between;
 border-bottom: solid black 1px;
 gap: 10px;
 align-items: center;
+position: sticky;
+top: 0;
+background-color: white;
+z-index: 1;
 }
 .navbar__s1__title{
     color: #B81AC3;
@@ -29,6 +33,7 @@ align-items: center;
     border: none;
     width: 100%;
     font-size: 16px;
+    background-color: transparent;
 }
 .navbar__s2 input:focus{
    outline:none;
@@ -37,6 +42,24 @@ align-items: center;
     display: flex;
     gap: 10px;
     align-items: center;
+}
+.mylearning{
+ position: relative;
+ cursor: pointer;
+
+}
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid 1px black;
+    width: 100px;
+    top: 150%;
+    padding: 20px;
+    right: 0;
+    display: none;
+}
+.mylearning:hover .mylearning__popup{
+    display: block;
 }
 .categories{
     display: flex;
@@ -52,6 +75,24 @@ align-items: center;
 }
 .sale-image img{
     width: 100%;
+}
+.sale-image__offer{
+    width: 350px;
+    height: 100px;
+    border: 3px solid darksalmon;
+    position: absolute;
+    top: 150px;
+    left: 150px;
+    background-color: azure;
+    color: deeppink;
+    padding: 20px;
+    
+
+
+}
+.sale-image__offer p{color: darkviolet;}
+.sale-image{
+    position: relative;
 }
 .recommended{
     padding: 10px;
