--- a/style.css
+++ b/style.css
@@ -72,6 +72,14 @@ z-index: 1;
     color: white;
     padding: 10px;
     border-radius: 30px;
+    cursor: pointer;
+      border: solid 1px #B81AC3 ;
+}
+.categories p:hover{
+    transition: 1s;
+    background-color: transparent;
+    color: black;
+    border: solid 1px #B81AC3 ;
 }
 .sale-image img{
     width: 100%;
@@ -86,10 +94,23 @@ z-index: 1;
     background-color: azure;
     color: deeppink;
     padding: 20px;
-    
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    }
 
+    @keyframes zoom{
+        0%{ 
+            transform: scale(0);
+            opacity: 0;
 
-}
+        }
+        100%{
+transform: scale(1);
+opacity: 1;
+        }
+    }
 .sale-image__offer p{color: darkviolet;}
 .sale-image{
     position: relative;
