--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ z-index: 1;
     gap: 10px;
     align-items: center;
 }
+.navbar__s4{
+    display: none;
+}
 .mylearning{
  position: relative;
  cursor: pointer;
@@ -85,15 +88,15 @@ z-index: 1;
     width: 100%;
 }
 .sale-image__offer{
-    width: 350px;
-    height: 100px;
-    border: 3px solid darksalmon;
+    width: 35%;
+    
+    border: 2px solid darksalmon;
     position: absolute;
-    top: 150px;
-    left: 150px;
+    top: 10%;
+    left: 5%;
     background-color: azure;
     color: deeppink;
-    padding: 20px;
+    padding: 2%;
     animation-name: zoom;
     animation-duration: 2s;
     opacity: 0;
@@ -126,7 +129,9 @@ opacity: 1;
 
 }
 .course-card{
-    width: 350px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 
 }
 
@@ -178,4 +183,28 @@ gap: 10px;
     justify-content: space-between;
     margin: 20px;
     align-items: center;
+}
+@media screen and (max-width:800px) {
+    body{
+        font-size: 10px;
+
+    }
+
+}
+    
+
+@media screen and (max-width:600px) {
+    .course-card{
+        flex-basis: 40%;
+
+    }
+   .categories{
+    display: none;
+   }
+   .navbar__s2,.navbar__s3{
+    display: none;
+   }
+   .navbar__s4{
+    display: block;
+   }
 }
